# bear-deterrent-system

./: README.md
Bear_Detection_Warning/: CMakeCache.txt  CMakeLists.txt  Makefile  bear_detection.cpp  cmake_install.cmake
Bears_UAV/GPS_offboard/: setup.cfg  setup.py
Bears_UAV/GPS_offboard/info/: package.xml
Bears_UAV/GPS_offboard/info/gps_offboard/: gps_node.py
Bears_UAV/broadcast_node/: package.xml  setup.py
Bears_UAV/broadcast_node/broadcast_node/: broadcast.py
Bears_UAV/fly_control/: package.xml  setup.cfg  setup.py
Bears_UAV/fly_control/fly_control/: elrs.py  uav_ctrl.py
Bears_UAV/video_pub/: CMakeLists.txt  package.xml
Bears_UAV/video_pub/src/: video_publisher.cpp  video_publisher_old.cpp
Bears_UAV/yolo_node/: package.xml  setup.py
Bears_UAV/yolo_node/yolo_node/: yolo_node.py
Central_Management_component/: Info.txt  bear_uir.c  bear_uir.cws  bear_uir.h  bear_uir.prj  bear_uir.uir
Image_server/: server_jpg.py
SmartPhone_bear_warning/: Bear_Alert.aia
XBOX_GPS_interface/: XBOX_main_functions.c  XBOX_main_functions.h  serial.c  serial.cws  serial.h  serial.prj  serial.uir
